# CP-Record

./: .gitignore  CMakeLists.txt  extra.cpp  extra.py
AtCoder Beginner Contests/419/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
AtCoder Beginner Contests/420/: a.cpp  c.cpp  d.cpp  e.cpp
AtCoder Beginner Contests/424/: a.cpp  b.cpp
AtCoder Beginner Contests/425/: a.cpp  f.cpp
AtCoder Beginner Contests/427/: a.cpp  b.cpp  c.cpp  d.cpp  f.cpp
AtCoder Beginner Contests/429/: a.cpp  b.cpp
AtCoder Beginner Contests/435/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp
AtCoder Upsolving/: abc424_f.cpp
Atcoder DP Contest/: u_grouping.cpp
CF Archive/: 1000D.cpp  1132F.cpp  118E.cpp  1204C.cpp  1242B.cpp  1244C.cpp  1244C.py  1245D.cpp  1277E.cpp  1288D.cpp  1359D.cpp  1364C.cpp  1366D.cpp  1369D.cpp  1475G.cpp  1620E.cpp  1627D.cpp  1715C.cpp  1749C.cpp  1766D.cpp  1788D.cpp  1854B.cpp  190E.cpp  1918D.cpp  1924A  1932F.cpp  1945F.cpp  1954D.cpp  1969D.cpp  1977C.cpp  1981B.cpp  1987D.cpp  2002D1.cpp  2026D.cpp  2045I.cpp  2079D.cpp  2093G.cpp  2121G.cpp  2133D.cpp  2144A.cpp  (+21 more)
CSES/Strings/: finding_borders.cpp  finding_periods.cpp  minimal_rotations.cpp  string_matching.cpp  word_combinations.cpp
CSES/dp/: counting_numbers.cpp  edit_distance.cpp  elevator_rides.cpp  increasing_subsequence_2.cpp
CodeChef Starters/200 Div2/: a.cpp  b.cpp  c.cpp  d.cpp
Codeforces Contests/Edu 183/: a.cpp  b.cpp  c.cpp  d.cpp
Codeforces Contests/Edu 184/: a.cpp  b.cpp  c.cpp  d.cpp
Codeforces Contests/Edu 185/: a.cpp  b.cpp  c.cpp  e.cpp
Codeforces Contests/Global Round 29/: a.cpp  b.cpp  c.cpp  d.cpp
Codeforces Contests/Global Round 30/: a.cpp  b.cpp  c.cpp  d.cpp
Codeforces Contests/Round 1043 (Div 3)/: A.cpp  B.cpp  C1.cpp  F.cpp
Codeforces Contests/Round 1044 (Div 2)/: A.cpp  B.cpp  C.cpp
Codeforces Contests/Round 1045 (Div 2)/: a.cpp  b.cpp  c.cpp
Codeforces Contests/Round 1046 (Div 2)/: a.cpp  b.cpp  c.cpp  d.cpp  f1.cpp
Codeforces Contests/Round 1047 (Div 3)/: a.cpp  b.cpp  c.cpp  d.cpp  g.cpp
Codeforces Contests/Round 1048 (Div 2)/: a.cpp  b.cpp  c.cpp  e1
Codeforces Contests/Round 1049 (Div 2)/: a.cpp  b.cpp  c.cpp  e1.cpp
Codeforces Contests/Round 1050 (Div 4)/: a.cpp  b.cpp  (+4 more)
Coderscup/: a.cpp  b.cpp  c.cpp  smth.py
Communicaton Problems (Testing round 20)/: a1.cpp  a2.cpp  b.cpp
LIT Contest/: a.cpp  d.cpp  sample.cpp
Meta Hackercup Round 1/: a.cpp  a2.cpp  b.cpp  b2.cpp  c.cpp  in.txt
StressTest/: Brute  Brute.cpp  Gen  Gen.cpp  Sol  Sol.cpp  input.txt  stress.sh
ThemeCP/: p1.cpp  p2.cpp  p3.cpp
mit^2_winter2025/: a.cpp  b.cpp  d.cpp  e.cpp  f.cpp
(+129 files in other folders)
